[gd_scene load_steps=5 format=2]

[ext_resource path="res://Rock.gd" type="Script" id=1]
[ext_resource path="res://Rock.png" type="Texture" id=2]
[ext_resource path="res://SFX_-_hit_basic_02.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 31.0161

[node name="Rock" type="Area2D" groups=["dangerous"]]
scale = Vector2( 0.7, 0.7 )
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Rock_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
